# asyncio-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  especificaciones_avanzadas_ejemplos.md  prompt_opencode_redeseno_proyecto.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
asyncio_manager/: __init__.py  ami_action.py  call_manager.py  cli.py  config.py  exceptions.py  fast_agi.py  logger.py  manager.py  message.py  protocol.py  typing_helpers.py  utils.py
docs/: api_reference.md  getting_started.md  index.html  installation.md  migration_from_panoramisk.md  troubleshooting.md
docs/es/: migration_from_panoramisk.md  troubleshooting.md
examples/: basic_listener.py  call_manager_usage.py  call_origination.py  config_example.ini  fast_agi_server.py  queue_management.py
tests/: conftest.py  test_ami_action.py  test_config.py  test_exceptions.py  test_manager.py  test_message.py  test_utils.py
